--- a/Changes
+++ b/Changes
@@ -49,6 +49,8 @@ Revision history for Perl module Math::Prime::Util
     - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
     - is_powerful(n[,k])              is n a k-powerful number (default k=2)
     - is_perfect_power(n)             is n a perfect power (1,4,8,9,16,25,..)
+    - is_odd(n)                       is n an odd integer (not divisible by 2)
+    - is_even(n)                      is n an even integer (divisible by 2)
     - almost_primes(k,[start,]end)    array ref of k-almost-primes
     - almost_prime_count(k,n)         count of integers with exactly k factors
     - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
