--- a/Changes
+++ b/Changes
@@ -51,6 +51,8 @@ Revision history for Perl module Math::Prime::Util
     - is_perfect_power(n)             is n a perfect power (1,4,8,9,16,25,..)
     - is_odd(n)                       is n an odd integer (not divisible by 2)
     - is_even(n)                      is n an even integer (divisible by 2)
+    - is_divisible(n,d)               is n exactly divisible by d
+    - is_congruent(n,c,d)             is n congruent to c mod d
     - almost_primes(k,[start,]end)    array ref of k-almost-primes
     - almost_prime_count(k,n)         count of integers with exactly k factors
     - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
