--- a/Changes
+++ b/Changes
@@ -83,6 +83,7 @@ Revision history for Perl module Math::Prime::Util
     - allsqrtmod(a,n)                 all square roots of a (mod n)
     - qnr(n)                          least quadratic non-residue
     - binomialmod(n,k,m)              fast binomial(n,k) mod m
+    - negmod(a, n)                    -a mod n
     - submod(a, b, n)                 a - b mod n
     - muladdmod(a, b, c, n)           a * b + c mod n
     - mulsubmod(a, b, c, n)           a * b - c mod n
