--- a/Changes
+++ b/Changes
@@ -88,6 +88,7 @@ Revision history for Perl module Math::Prime::Util
     - powerfree_sum(n[,k])            sum of k-powerfree numbers <= n
     - powerfree_part(n[,k])           remove excess powers from n
     - powerfree_part_sum(n[,k])       sum of k-powerfree parts for 1 to n
+    - squarefree_kernel(n)            integer radical of |n|
     - perfect_power_count([lo,] hi)   count of perfect powers
     - smooth_count(n,k)               count of k-smooth numbers <= n
     - rough_count(n,k)                count of k-rough numbers <= n
