setinsert can take a list ref

--- a/Changes
+++ b/Changes
@@ -157,6 +157,7 @@ Revision history for Perl module Math::Prime::Util
     - vecsortrr(\@L)                  as vecsortr but returns a list ref
     - toset(\@A)                      convert to unique sorted integer list
     - setinsert(\@A,$v)               insert integer v into integer set A
+    - setinsert(\@A,\@B)              insert list B into integer set A
     - setcontains(\@A,$v)             is integer v in integer set A
     - setcontains(\@A,\@B)            is integer set B a subset of int set A
     - setbinop {...} \@A[,\@B]        apply op to cross product of set(s)
