--- a/Changes
+++ b/Changes
@@ -183,6 +183,14 @@ Revision history for Perl module Math::Prime::Util
     - set_is_superset(\@A,\@B)        is set B a superet of set A
     - set_is_proper_superset(\@A,\@B) is set B a proper superet of set A
     - set_is_proper_intersection(\@A,\@B)   "" a proper intersection ""
+    - contfrac(n,d)                   array of continued fraction for n/d
+    - next_calkin_wilf(n,d)           next breadth-first CW rational
+    - next_stern_brocot(n,d)          next breadth-first SB rational
+    - calkin_wilf_n(n,d)              index of breadth-first CW rational
+    - stern_brocot_n(n,d)             index of breadth-first SB rational
+    - nth_calkin_wilf(n)              CW rational at breadth-first index n
+    - nth_stern_brocot(n)             SB rational at breadth-first index n
+    - nth_stern_diatomic(n)           Stern's Diatomic series; fusc(n)
 
 
     [FIXES]
