--- a/Changes
+++ b/Changes
@@ -192,6 +192,8 @@ Revision history for Perl module Math::Prime::Util
     - nth_stern_diatomic(n)           Stern's Diatomic series; fusc(n)
     - farey(n)                        list of Farey sequence order n
     - farey(n,k)                      k'th entry of Farey sequence order n
+    - next_farey(n,[p,q])             next order-n rational after p/q
+    - farey_rank(n,[p,q])             number of F_n less than p/q
 
 
     [FIXES]
