--- a/README
+++ b/README
@@ -57,6 +57,8 @@ Perl 5.6.2 or later (5.8 or later is preferred).
 
 Bytes::Random::Secure::Tiny 1.002 or later.
 
+C89 compiler, 32-bit or 64-bit.
+
 
 COPYRIGHT AND LICENCE
 
