--- a/Changes
+++ b/Changes
@@ -178,7 +178,7 @@ Revision history for Perl module Math::Prime::Util
     - vecsort(@L)                     numerically sort integer list
     - vecsorti(\@L)                   in-place numeric sort a list ref
     - vecsample(k,@list)              return k random elements of list
-    - toset(\@A)                      convert to unique sorted integer list
+    - toset(...)                      convert to unique sorted integer aref
     - setinsert(\@A,$v)               insert integer v into integer set A
     - setinsert(\@A,\@B)              insert list B into integer set A
     - setremove(\@A,$v)               remove integer v from integer set A
