API change for setcontains, setcontainsany, setinsert, setremove, setinvert.  Takes multiple scalars.

--- a/Changes
+++ b/Changes
@@ -178,15 +178,16 @@ Revision history for Perl module Math::Prime::Util
     - vecsort(@L)                     numerically sort integer list
     - vecsorti(\@L)                   in-place numeric sort a list ref
     - vecsample(k,@list)              return k random elements of list
-    - toset(...)                      convert to unique sorted integer aref
+    - toset(...)                      convert to int set (unique sorted aref)
     - setinsert(\@A,$v)               insert integer v into integer set A
     - setinsert(\@A,\@B)              insert list B into integer set A
     - setremove(\@A,$v)               remove integer v from integer set A
     - setremove(\@A,\@B)              remove list B values from integer set A
     - setinvert(\@A,$v)               if v is in set A, remove, otherwise add
     - setinvert(\@A,\@B)              invert for all values in integer list B
-    - setcontains(\@A,$v)             is integer v in integer set A
-    - setcontains(\@A,\@B)            is integer set B a subset of int set A
+    - setcontains(\@A,...)            are list values all in int set A
+    - setcontains(\@A,\@B)            is int set B a subset of int set A
+    - setcontainsany(\@A,...)         are any list values in int set A
     - setcontainsany(\@A,\@B)         is any value in B in int set A
     - setbinop {...} \@A[,\@B]        apply op to cross product of set(s)
     - sumset(\@A[,\@B])               new set from a+b {a:A,b:B}
