Reverted Math::BigInt integer validation that turned out very slow using the default Calc backend (big stirling was 10x slower, yikes).  Faster stirling.

--- a/Changes
+++ b/Changes
@@ -339,6 +339,8 @@ Revision history for Perl module Math::Prime::Util
 
     - forsetproduct handles tied input arrays.
 
+    - stirling first kind without GMP is faster for some inputs.
+
     [OTHER]
 
     - Legendre, Meissel, and Lehmer prime counting got rewritten to use our
