--- a/Changes
+++ b/Changes
@@ -358,6 +358,10 @@ Revision history for Perl module Math::Prime::Util
       the Perl backend to support other bigint classes (e.g. Math::GMPz and
       Math::GMP) rather than being specific to Math::BigInt.
 
+    - Older versions of Test::More with Math::GMPz and Math::GMP have issues
+      comparing big integers.  Lots of the tests will stringify the output
+      so is(x,y,txt) will work even if x or y is an object.
+
 
 0.73 2018-11-15
 
